# Context-Cache

./: .gitignore  LICENSE  Makefile  README.md  build_guide.md  product_specification.md  pyproject.toml  repo_layout.md
backend/context_cache/: __init__.py  app.py
backend/context_cache/api/: __init__.py  dependencies.py  routes_admin.py  routes_ingest.py  routes_query.py
backend/context_cache/cli/: main.py
backend/context_cache/core/: __init__.py  config.py  logging.py  metrics.py
backend/context_cache/db/: __init__.py  schema.sql  sqlite.py
backend/context_cache/ingest/: __init__.py  chunker.py  dedupe.py  embeddings.py  loaders.py  pipeline.py  types.py  watcher.py
backend/context_cache/models/: __init__.py  dto.py  entities.py
backend/context_cache/retrieval/: __init__.py  hybrid.py  rerank.py  search.py  vector_index.py
backend/context_cache/security/: encryption.py  keychain.py
backend/context_cache/utils/: __init__.py  hashing.py  ids.py  text.py  time.py
backend/tests/: conftest.py  test_api.py  test_chunker.py  test_embeddings.py  test_retrieval.py
backend/tests/fixtures/: mail.mbox  sample.md
config/: config.example.yaml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/ui/: index.html  package-lock.json  package.json
desktop/ui/src/: App.tsx  styles.css  types.ts
desktop/ui/src/components/: Filters.tsx  ProvenancePanel.tsx  ResultList.tsx
desktop/ui/src/hooks/: useApi.ts
desktop/ui/src/pages/: Search.tsx  Settings.tsx  Status.tsx
desktop/ui/src/utils/: external.ts
