[project]
name = "context-cache"
version = "0.1.0"
description = "Local knowledge layer with private retrieval API"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Context Cache", email = "ops@contextcache.local"}]
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  "python-multipart",
  "watchdog>=4.0",
  "pymupdf>=1.24",
  "python-docx>=1.1",
  "markdown-it-py>=3.0",
  "textract==1.6.5",
  "sentence-transformers>=3.0",
  "faiss-cpu>=1.8.0",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "rank-bm25>=0.2.2",
  "rapidfuzz>=3.9",
  "tiktoken>=0.7",
  "sqlalchemy>=2.0",
  "sqlite-utils>=3.36",
  "prometheus-client>=0.20",
  "typer>=0.12",
  "pyyaml>=6.0",
  "orjson>=3.10",
  "langid==1.1.6",
  "presidio-analyzer>=2.2"
]

[project.optional-dependencies]
sqlite-vss = ["sqlite-vss==0.1.3"]
dev = ["pytest>=8.3", "httpx>=0.27", "pytest-asyncio>=0.23", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "W", "UP", "SIM"]

[tool.ruff.isort]
known-first-party = ["context_cache"]
