[package]
name = "context-cache-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = ["shell-open", "system-tray", "dialog-all"] }
ureq = "2.9"

[build-dependencies]
tauri-build = { version = "1.6" }
