[package]
name = "context-cache-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.4.1", features = ["tray-icon", "image-png"] }
ureq = { version = "2.9", features = ["json"] }

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }
